--- a/build.gradle
+++ b/build.gradle
@@ -65,19 +65,23 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging'
     implementation 'org.springframework.session:spring-session-core'
 
-    implementation 'org.hibernate:hibernate-envers:5.0.11.Final'
+//    implementation 'org.hibernate:hibernate-envers:5.0.11.Final'
+    implementation 'org.hibernate:hibernate-envers:5.4.18.Final'
 
     // Login Web Form
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.36'
+//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.36'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.37'
     implementation 'javax.servlet:jstl:1.2'
 
     // Webjars (for css/js libs)
-    implementation 'org.webjars:webjars-locator:0.30'
-    implementation 'org.webjars:bootstrap:3.3.7'
+//    implementation 'org.webjars:webjars-locator:0.30'
+    implementation 'org.webjars:webjars-locator:0.40'
+//    implementation 'org.webjars:bootstrap:3.3.7'
+    implementation 'org.webjars:bootstrap:4.5.0'
 
     // Amazon Web Service (AWS)
-    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:1.1.3.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:1.1.3.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:2.2.2.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.2.RELEASE'
 
     // Other
     implementation 'org.apache.commons:commons-lang3:3.5'
