update aws version to be managed by boot and hibrnate version. Also update ActionLog text field type to clob

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ bin
 
 #added application-local.yaml for developers to define their unique develop properties
 src/main/resources/application-local.yaml
+
+apidoc/package-lock.json
