--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging'
     implementation 'org.springframework.session:spring-session-core'
 
-    implementation 'org.hibernate:hibernate-envers:5.0.11.Final'
+    implementation 'org.hibernate:hibernate-envers:5.4.17.Final'
 
     // Login Web Form
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.36'
@@ -76,8 +76,8 @@ dependencies {
     implementation 'org.webjars:bootstrap:3.3.7'
 
     // Amazon Web Service (AWS)
-    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:1.1.3.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:1.1.3.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure'
+    implementation 'org.springframework.cloud:spring-cloud-aws-messaging'
 
     // Other
     implementation 'org.apache.commons:commons-lang3:3.5'
