--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
@@ -114,12 +115,10 @@ eclipse {
 
 test {
     outputs.dir snippetsDir
-    useJUnitPlatform()
     reports {
         junitXml.enabled = true
         html.enabled = true
     }
-    // TODO 2020 modernization - tests are not being run, fix detection settings
 }
 
 codenarc {
