--- a/src/main/resources/db/changelog/v1-0/client.yaml
+++ b/src/main/resources/db/changelog/v1-0/client.yaml
@@ -220,7 +220,7 @@ databaseChangeLog:
                   value: client-super
               - column:
                   name: client_secret
-                  value: '{noop}secret'
+                  value: $2a$10$O18olEO5.msyNDEyM21VJexb34xRPkM9KqxY3qhkJesRgn23sXJJS
               - column:
                   name: is_secret_required
                   valueBoolean: false
@@ -268,7 +268,7 @@ databaseChangeLog:
                   value: client-standard
               - column:
                   name: client_secret
-                  value: '{noop}secret'
+                  value: $2a$10$O18olEO5.msyNDEyM21VJexb34xRPkM9KqxY3qhkJesRgn23sXJJS
               - column:
                   name: is_secret_required
                   valueBoolean: true
