--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -6,4 +6,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/v1-0/_db.changelog.yaml
   - include:
+      file: db/changelog/v2-0/_db.changelog.yaml
+  - include:
       file: db/changelog/test/_db.changelog.yaml
