updated apiDoc deployment path from /docs to /api/docs

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -75,7 +75,7 @@ server:
 #######################################################################################################################
 security:
 
-  ignored: /resources/**, /webjars/**, /docs, /docs/**
+  ignored: /resources/**, /webjars/**, /api/docs, /api/docs/**
   permitAll: /login, /api/status, /api/**/profiles/register, /actuator/**
 
   user-roles:
