--- a/apidoc/package.json
+++ b/apidoc/package.json
@@ -6,6 +6,6 @@
     "apidoc": ">0.17.4"
   },
   "scripts": {
-    "apidoc": "apidoc -o ../src/main/webapp/docs -i ../ -f \"/src/main/groovy/.*\\.groovy$\" -f \"/apidoc/templates.*\\.js$\" "
+    "apidoc": "apidoc -o ../src/main/webapp/api/docs -i ../ -f \"/src/main/groovy/.*\\.groovy$\" -f \"/apidoc/templates.*\\.js$\" "
   }
 }
