--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,9 +76,10 @@ server:
 security:
   oauth2:
     resourceserver:
-      jwt:
-        jwk-set-uri: http://localhost:8180/auth/realms/VoyageBaseRealm/protocol/openid-connect/certs
-        issuer-uri: http://localhost:8180/auth/realms/VoyageBaseRealm
+      opaque:
+        introspection-uri: http://localhost:8180/auth/realms/VoyageBaseRealm/protocol/openid-connect/introspect
+        introspection-client-id: voyage-base-api
+        introspection-client-secret: bd069850-478a-4dc4-9307-368e9bcadd86
 
   ignored: /resources/**, /webjars/**, /docs, /docs/**
   permitAll: /login, /api/status, /api/**/profiles/register, /actuator/**
